Scroll effect was added to the sections of NavBar

--- a/sofyruizportafolio/public/index.html
+++ b/sofyruizportafolio/public/index.html
@@ -23,6 +23,8 @@
     <title>Sofia Ruiz</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
+    <!-- Scroll -->
+    <script src="https://unpkg.com/scrollreveal"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
